--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,12 @@
     <string name="app_name">La Reclame</string>
     <string name="sign_up">Sign up</string>
     <string name="email_address">Email</string>
-    <string name="password">Password (at least 6 characters)</string>
+    <string name="password">Password</string>
     <string name="sign_in">Sign In</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="username">Username</string>
     <string name="re_enter_password">Re-enter password</string>
     <string name="already_have_an_account">Already have an account?</string>
+    <string name="app_logo">App logo</string>
 
 </resources>
