add: profile photo and name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="re_enter_password">Re-enter password</string>
     <string name="already_have_an_account">Already have an account?</string>
     <string name="app_logo">App logo</string>
+    <string name="name">Ayazhan Aitzhanova</string>
 
 </resources>
