--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,8 @@
     <string name="project">Project</string>
     <string name="other">Other</string>
     <string name="services">Services</string>
-    <string name="today_11_23">Today 11:23</string>
+<!--    <string name="today_11_23">Today 11:23</string>-->
+    <string name="today_11_23">11:55 11-05-2022</string>
     <string name="_3">Продам 3-х комнатную квартиру в центре города</string>
     <string name="_19_500_000">19 500 000 тенге</string>
     <string name="todo">TODO</string>
